test/files/neg/array-not-seq.check
array-not-seq.scala:2: warning: An Array will no longer match as Seq[_].
  def f1(x: Any) = x.isInstanceOf[Seq[_]]
                                 ^
array-not-seq.scala:4: warning: An Array will no longer match as Seq[_].
    case _: Seq[_]  => true
          ^
array-not-seq.scala:16: warning: An Array will no longer match as Seq[_].
    case (Some(_: Seq[_]), Nil, _)        => 1
                ^
array-not-seq.scala:17: warning: An Array will no longer match as Seq[_].
    case (None, List(_: List[_], _), _)   => 2
                    ^
error: No warnings can be incurred under -Xfatal-warnings.
four warnings found
one error found
